# vdelxc

./: CMakeLists.txt  README.md  fdprintf.c  fdprintf.h  log.c  log.h  passfd.c  passfd.h  vdeauth.c  vdeauth.h  vdelxcc.c  vdelxcd.c
man/: vdelxcc.1  vdelxcc.1.md  vdelxcd.1  vdelxcd.1.md
